# SuvidhaSetu

./: .gitignore  .vercelignore  DEPLOYMENT.md  README.md  discovered_slugs.txt  fetch_and_import.py  generate_dummy_db.py  government_schemes_demographic_report.md  import_csv.py  parse_debug.py  playwright_scrape.py  pyproject.toml  replace_script.py  scrape_schemes.py  test_scrape.py  vercel.json  verification_report.md  verification_report.txt
api/: main.py
api/services/: ai.py
recommender/: app.py  parse_eligibility.py  questions.py  scorer.py  utils.py
web/: README.md  next.config.ts  package-lock.json  package.json  vercel.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/visit/: route.ts
web/app/browse/: page.tsx
web/app/chat/: page.tsx
web/app/contribute/: page.tsx
web/app/find/: page.tsx
web/app/insights/: page.tsx
web/app/insights/demographics/: page.tsx
web/app/insights/hidden-schemes/: page.tsx
web/app/insights/how-it-works/: page.tsx
web/app/insights/launch-notes/: page.tsx
web/app/results/: page.tsx
web/app/scheme/[slug]/: page.tsx
web/components/ai/: ExplainButtons.tsx
web/components/i18n/: LanguageSelector.tsx
web/components/nav/: Footer.tsx  Navbar.tsx
web/components/questionnaire/: ChipOption.tsx  NumberInput.tsx  StateSearch.tsx
web/components/results/: SchemeCard.tsx
web/components/scheme/: DocumentChecklist.tsx
web/components/ui/: AshokaChakra.tsx  ScoreBadge.tsx  VisitorCounter.tsx
web/lib/: api.ts  questions.ts  store.ts  text.ts  types.ts  utils.ts
web/lib/server/: rate-limit.ts
(+1 files in other folders)
