[project]
name = "scheme-finder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"anthropic>=0.40.0",
	"huggingface-hub>=0.23.0",
	"pandas>=2.2.0",
	"pdfplumber>=0.11.0",
	"playwright>=1.44.0",
	"httpx>=0.28.0",
	"tenacity>=8.3.0",
	"selectolax>=0.3.21",
	"tqdm>=4.67.0",
	"streamlit>=1.58.0",
]

[tool.hatch.build.targets.wheel]
packages = ["scraper"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
